add register route and swagger
